[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Biker.gd" type="Script" id=1]
[ext_resource path="res://Player/spritesheets/biker.png" type="Texture" id=2]
[ext_resource path="res://Player/wheels_physicsmaterial.tres" type="PhysicsMaterial" id=3]
[ext_resource path="res://assets/Biker.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 19.9173

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.0605, 1.62513 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 2.38876 )

[node name="Biker" type="Node2D"]
script = ExtResource( 1 )

[node name="Bike" type="Node2D" parent="."]

[node name="bike_body_rb" type="RigidBody2D" parent="Bike"]
editor/display_folded = true
mass = 20.0
__meta__ = {
"_edit_group_": true
}

[node name="bike_body" type="Sprite" parent="Bike/bike_body_rb"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( -0.561096, 66.8025, 110.678, 54.9231 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bike/bike_body_rb"]
polygon = PoolVector2Array( -10.5624, 24.8961, -14.1578, 10.1663, -21.8126, 9.8184, -33.8747, 0.771801, -44.1971, -5.0273, -44.7771, -8.62274, -52.6638, -9.66658, -53.5917, -11.7543, -44.5451, -12.2182, -21.5807, -9.66658, -2.90755, -8.97068, 8.45868, -12.9141, 11.2422, -20.4529, 12.634, -24.2803, 15.5336, -26.252, 19.8249, -26.368, 25.0441, -22.3086, 30.8432, -9.20265, 34.7866, -10.2465, 46.9647, -9.31863, 56.8232, -1.89578, 55.4314, -0.96793, 45.341, -5.95515, 31.3071, -4.79533, 29.9153, -3.98346, 31.0587, -0.898724, 28.2247, 0.329361, 26.6679, -2.35971, 22.9564, 2.39555, 20.2888, 8.77456, 16.8094, 10.1663, 13.7938, 21.5326, 10.4304, 25.012, 3.23949, 25.8239 )

[node name="wheel_back_rb" type="RigidBody2D" parent="Bike"]
position = Vector2( -37.733, 28.8771 )
mass = 2.0
physics_material_override = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="wheel_back" type="Sprite" parent="Bike/wheel_back_rb"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 342, 1, 40, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bike/wheel_back_rb"]
shape = SubResource( 1 )

[node name="pin_wheel_back_suspension" type="PinJoint2D" parent="Bike"]
position = Vector2( -37.733, 28.8771 )
node_a = NodePath("../wheel_back_rb")
node_b = NodePath("../suspension_back_rb")

[node name="wheel_front_rb" type="RigidBody2D" parent="Bike"]
editor/display_folded = true
position = Vector2( 47.5261, 29.076 )
mass = 2.0
physics_material_override = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="wheel_back" type="Sprite" parent="Bike/wheel_front_rb"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 342, 1, 40, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bike/wheel_front_rb"]
shape = SubResource( 1 )

[node name="suspension_back_rb" type="RigidBody2D" parent="Bike"]
editor/display_folded = true
position = Vector2( -26.3179, 25.384 )
rotation = 2.82677
__meta__ = {
"_edit_group_": true
}

[node name="suspension_back" type="Sprite" parent="Bike/suspension_back_rb"]
position = Vector2( -0.000370026, -0.00041008 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 243.784, 127.167, 36.338, 16.0886 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bike/suspension_back_rb"]
position = Vector2( -2.73535, -0.0576096 )
shape = SubResource( 2 )

[node name="spring_suspension_back_bike" type="DampedSpringJoint2D" parent="Bike"]
position = Vector2( -37.2396, 28.8641 )
rotation = 3.13985
node_a = NodePath("../suspension_back_rb")
node_b = NodePath("../bike_body_rb")
length = 30.0
rest_length = 30.0
stiffness = 64.0
damping = 16.0

[node name="pin_suspension_bike" type="PinJoint2D" parent="Bike"]
position = Vector2( -9.87256, 19.9073 )
rotation = 2.78729
node_a = NodePath("../suspension_back_rb")
node_b = NodePath("../bike_body_rb")

[node name="suspension_front_rb" type="RigidBody2D" parent="Bike"]
editor/display_folded = true
position = Vector2( 41.774, 23.4068 )
rotation = 1.08909
__meta__ = {
"_edit_group_": true
}

[node name="suspension_front" type="Sprite" parent="Bike/suspension_front_rb"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 353.907, 123.561, 25.2425, 19.4173 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bike/suspension_front_rb"]
shape = SubResource( 3 )

[node name="pin_wheel_front_suspension" type="PinJoint2D" parent="Bike"]
position = Vector2( 47.3337, 28.8985 )
node_a = NodePath("../wheel_front_rb")
node_b = NodePath("../suspension_front_rb")

[node name="pin_front_suspension_bike" type="PinJoint2D" parent="Bike"]
position = Vector2( 133.969, -34.0383 )
rotation = 2.66622
node_a = NodePath("../suspension_front_rb")
node_b = NodePath("../bike_body_rb")

[node name="spring_suspension_front_bike" type="DampedSpringJoint2D" parent="Bike"]
position = Vector2( 39.493, 19.2571 )
rotation = 2.66622
node_a = NodePath("../suspension_front_rb")
node_b = NodePath("../bike_body_rb")
length = 14.0
rest_length = 14.0
stiffness = 64.0

[node name="Biker2" type="Sprite" parent="."]
visible = false
position = Vector2( 2.3002, -9.25848 )
scale = Vector2( 0.406063, 0.406063 )
texture = ExtResource( 4 )

[node name="Biker" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="head" type="Sprite" parent="Biker"]
position = Vector2( -5.33675, -50.055 )
rotation = 0.202034
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 22.1495, 126.057, 34.1189, 28.0163 )

[node name="body" type="Sprite" parent="Biker"]
position = Vector2( -11.9617, -23.9234 )
rotation = 0.240763
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 382.201, 67.528, 16.9208, 32.732 )

[node name="upper_arm" type="Sprite" parent="Biker"]
position = Vector2( -7.54506, -29.8122 )
rotation = 0.705633
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 318.512, 67.4294, 18.7628, 12.3372 )

[node name="lower_arm" type="Sprite" parent="Biker"]
position = Vector2( 5.88883, -25.0275 )
rotation = 0.135685
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 444.991, 67.3638, 21.3002, 10.2557 )

[node name="upper_leg" type="Sprite" parent="Biker"]
position = Vector2( -8.83324, -8.64921 )
rotation = 0.391617
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 116.39, 126.866, 19.764, 12.3854 )

[node name="lower_leg" type="Sprite" parent="Biker"]
position = Vector2( -3.68052, 4.9687 )
rotation = 0.0486615
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 182.274, 127.587, 19.2045, 32.7607 )
